--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,11 @@
 # Database Configuration
-POSTGRES_PASSWORD=ceramic_dev_password
 DATABASE_URL=postgresql://ceramic_user:ceramic_dev_password@localhost:5432/ceramic_materials
 
-# Redis Cache
+# Redis Configuration
 REDIS_URL=redis://localhost:6379/0
 
-# External API Keys
-MATERIALS_PROJECT_API_KEY=your_mp_api_key_here
+# Materials Project API
+MATERIALS_PROJECT_API_KEY=your_api_key_here
 
 # HDF5 Storage
 HDF5_DATA_PATH=./data/hdf5
@@ -14,16 +13,23 @@ HDF5_DATA_PATH=./data/hdf5
 # Computational Settings
 MAX_PARALLEL_JOBS=4
 DFT_TIMEOUT_SECONDS=3600
-
-# ML Model Settings
 ML_RANDOM_SEED=42
 ML_CROSS_VALIDATION_FOLDS=5
+
+# HPC Configuration
+HPC_SCHEDULER=slurm
+HPC_PARTITION=compute
+HPC_MAX_NODES=4
 
 # Logging
 LOG_LEVEL=INFO
 LOG_FILE=./logs/ceramic_discovery.log
 
-# HPC Settings (optional)
-HPC_SCHEDULER=slurm
-HPC_PARTITION=compute
-HPC_MAX_NODES=4
+# SiC Alloy Designer Integration - Data Sources
+JARVIS_ENABLED=true
+JARVIS_FILE_PATH=./data/jdft_3d-7-7-2018.json
+
+NIST_ENABLED=true
+NIST_DATA_DIR=./data/nist
+
+LITERATURE_ENABLED=true
